ファイルをいったんローカルにアップロード

--- a/.github/workflows/deploy-iaas-vm.yml
+++ b/.github/workflows/deploy-iaas-vm.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm run build
       - name: Test Node.js app
         run: npm run test
-      - name: Restart service
+      - name: Stop service
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.AZURE_VM_IP }}
@@ -31,6 +31,7 @@ jobs:
           key: ${{ secrets.AZURE_VM_KEY }}
           script: |
             sudo systemctl stop webapp
+            sudo rm -rf ~/app/*
       - name: Transfer build files
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -38,8 +39,7 @@ jobs:
           username: ${{ secrets.AZURE_VM_USERNAME }}
           key: ${{ secrets.AZURE_VM_KEY }}
           source: "./*"
-          target: "/app"
-          rm: true
+          target: "~/app"
       - name: Restart service
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -47,4 +47,6 @@ jobs:
           username: ${{ secrets.AZURE_VM_USERNAME }}
           key: ${{ secrets.AZURE_VM_KEY }}
           script: |
+            sudo rm -rf /app/*
+            sudo mv ~/app/* /app
             sudo systemctl start webapp
