--- a/.github/workflows/deploy-iaas-vm.yml
+++ b/.github/workflows/deploy-iaas-vm.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: ${{ env.NODEJS_VERSION }}
           cache: "npm"
+          cache-dependency-path: "./package-lock.json"
       - name: Install dependencies
         run: npm ci
       - name: Build Node.js app
